Fix wrong mapping of genres to genre numbers

When using TagLib < 1.12, the following genres cannot be set in ID3v1:
Avant-Garde, Beat Music, Bebop, Britpop, Dancehall, Dark Wave,
Euro House, Eurotechno, Fast Fusion, Folk Rock, Hip Hop, Jazz-Funk,
Pop-Funk, Synth-Pop, Worldbeat.

The following genres will have a wrong number in ID3v2:
Fast Fusion (Folk), Folk (Folk Rock), Folk Rock (Folklore),
Folklore (Freestyle), Funk (Fusion), Fusion (Fast Fusion)

This will fix the wrong mapping and support the old genre names used
by TagLib < 1.12.

BUG: 437001